Thu Jan 24 15:32:59 2002  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* configure, configure.in: Add --with-rx option to switch to
	system rx code (e.g. on BSDI). Needs some touchups still,
	including checking that rxposix.h exists and if --without-rx was
	supplied for some reason.

	* htlib/HtRegex.h: Add conditional <rxposix.h> header for systems
	where rx is better than regex.

	* htlib/Makefile.in: Make sure regex.o is only compiled if it
	works on a given system via LIBOBJS as supplied by the configure
	script.

Mon Jan 21 22:33:30 2002  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdoc/RELEASE.html: Add first shot at the release notes for
	3.1.6. Still need to finish some of the htdoc/ merges, including
	the SF icons and such.

	* htdoc/*.html: First stab at many of the htdoc/merges including
	the new Copyright line. (It is 2002, after all.)

Fri Jan 18 18:17:34 2002  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htmerge/docs.cc: Add a test if the DB database has no URLs
	before proceeding.

	* htmerge/words.cc: Add a slightly more user-friendly error
	message if the word list file doesn't exist. Remove exit()
	statements since reportError does this for us.

Fri Jan 18 16:47:50 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/attrs.html: Rewrote description of prefix_match_character
	to make it more clear, with crosslinks to related attributes, and
	described new wildcard matching feature. Added more explanations
	for relative days & months in startday et al. to make it clearer.
	Added more notes about to-strings in the url_part_aliases description
	and explained the example even more, as well as adding crosslinks
	to the new *_rewrite_rules.

Fri Jan 18 15:56:11 2002  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/htsearch.cc (setupWords), htsearch/parser.cc (perform_push):
	Added support for a wildcard word of "*" (or prefix_match_character
	if set and not empty) which returns all documents.
