@@ -88,6 +88,7 @@
 	</font> <br>
 	<b>I</b> <font face="helvetica,arial" size="2"><br>
 	  <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#ignore_alt_text">ignore_alt_text</a><br>
+	  <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#ignore_dead_servers">ignore_dead_servers</a><br>
 	  <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#image_list">image_list</a><br>
 	  <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#image_url_prefix">image_url_prefix</a><br>
 	  <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#include">include</a><br>
