@@ -45,6 +45,7 @@
 	  <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#http_proxy">http_proxy</a><br>
 	  <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#http_proxy_exclude">http_proxy_exclude</a><br>
 	  <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#ignore_alt_text">ignore_alt_text</a><br>
+	  <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#ignore_dead_servers">ignore_dead_servers</a><br>
 	  <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#image_list">image_list</a><br>
 	  <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#keywords_factor">keywords_factor</a><br>
 	  <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#keywords_meta_tag_names">keywords_meta_tag_names</a><br>
